--- a/stylehome.css
+++ b/stylehome.css
@@ -10,6 +10,10 @@ main{
     left: 40px;
     top: 40px;
 }
+main section{
+    width: 940px;
+    padding: 0 auto;
+}
 main textarea{
     border: none;
     background: none;  
@@ -17,9 +21,9 @@ main textarea{
 .texto-nuevo{
    position: absolute;
     width: 450px;
-    height: 300px;
-    left: 140px;
-    top: 128px;
+    height: 350px;
+    left: 250px;
+    top: 70px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
@@ -37,7 +41,7 @@ main textarea{
     width: 450px;
     height: 18px;
     top: 450px;
-    left: 140px;
+    left: 250px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
@@ -45,7 +49,10 @@ main textarea{
     line-height: 100%;
     color: gray;
 }
-
+.signo{
+    width: 12px;
+    height: auto;
+}
 .botones{
     /* Frame 3 */
 
@@ -59,8 +66,31 @@ gap: 24px;
 position: absolute;
 width: 80px;
 height: 67px;
-left: 140px;
+left: 250px;
 top: 470px;
-
-
+}
+.secundario{
+    
+}
+.texto-encriptado{
+    border-radius: 10px;
+    background-color: white;
+    position: absolute;
+    width: 250px;
+    height: 460px;
+    left: 800px;
+    top: 70px;
+    text-align: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 100%;
+}
+.muneco{
+    position: absolute;
+    width: 160px;
+    height: auto;
+    left: 855px;
+    top: 240px;
 }
