--- a/stylehome.css
+++ b/stylehome.css
@@ -54,23 +54,44 @@ main textarea{
     height: auto;
 }
 .botones{
-    /* Frame 3 */
-
-/* Auto layout */
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 0px;
-gap: 24px;
-
-position: absolute;
-width: 80px;
-height: 67px;
-left: 250px;
-top: 470px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 24px;
+    position: absolute;
+    width: 450px;
+    height: 70px;
+    left: 250px;
+    top: 470px;
 }
-.secundario{
-    
+.encriptar{
+    background-color: #0A3871;
+    padding: 5px 10px;
+    margin: auto;
+    width: 200px;
+    height: 45px;
+    border-radius: 10px;
+    border: none;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #D8DFE8;
+    box-shadow: 2px 2px 1px 1px #000000;
+}
+.desencriptar{
+    background-color: #D8DFE8;
+    padding: 5px 10px;
+    margin: auto;
+    width: 200px;
+    height: 45px;
+    border-radius: 10px;
+    border: none;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #0A3871;
+    box-shadow: 2px 2px 1px 1px #000000;
 }
 .texto-encriptado{
     border-radius: 10px;
