--- a/stylehome.css
+++ b/stylehome.css
@@ -14,22 +14,41 @@ main section{
     width: 940px;
     padding: 0 auto;
 }
+.titulo{
+    position: absolute;
+    left: 400px;
+    top: 20px;
+    font-weight: bold;
+    font-size: 27px;
+    line-height: 100%;
+    color: #0A3871;
+}
+.subtitulo{
+    position: absolute;
+    left: 425px;
+    top: 60px;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 100%;
+    color: #0A3871;
+}
 main textarea{
     border: none;
     background: none;  
 }
 .texto-nuevo{
-   position: absolute;
+    position: absolute;
     width: 450px;
-    height: 350px;
+    height: 300px;
     left: 250px;
-    top: 70px;
+    top: 120px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
     font-size: 22px;
     line-height: 100%;
     color: #0A3871;
+    resize: none;
 }
 .principal-dos{
     display: flex;
@@ -107,11 +126,59 @@ main textarea{
     font-weight: 300;
     font-size: 18px;
     line-height: 100%;
+    resize: none;
 }
 .muneco{
     position: absolute;
     width: 160px;
     height: auto;
     left: 855px;
-    top: 240px;
+    top: 200px;
+}
+.frase{
+    position: absolute;
+    width: 160px;
+    height: auto;
+    left: 855px;
+    top: 365px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 100%;
+    text-align: center;
+    color: black;
+}
+.mensaje{
+    position: absolute;
+    width: 160px;
+    height: auto;
+    left: 855px;
+    top: 410px;
+    font-family: 'Inter';
+    font-weight: 550;
+    font-size: 10px;
+    line-height: 100%;
+    text-align: center;
+    color: rgb(87, 87, 87);
+}
+.copiar{
+    display: none;
+    position: absolute;
+    left: 825px;
+    top: 470px;
+    background-color: white;
+    padding: 5px 10px;
+    width: 200px;
+    height: 45px;
+    border-radius: 10px;
+    border: none;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    color: #6e6e6e;
+    box-shadow: 1px 1px 1px 1px #6e6e6e;
+}
+footer{
+    background-color: gray;
+    height: 65px;
+
 }
