--- a/style.css
+++ b/style.css
@@ -1,39 +1,39 @@
 main{
     width: 100%;
-    height: 100%;
+    height: 88%;
     background: #F3F5FC;
 }
 .logo{
     position: absolute;
     width: 120px;
-    height: 48px;
+    height: auto;
     left: 40px;
     top: 40px;
 }
 main section{
-    width: 940px;
+    width: 1024px;
     padding: 0 auto;
 }
 .titulo{
     position: absolute;
-    left: 400px;
-    top: 20px;
+    left: 300px;
+    top: 40px;
     font-weight: bold;
-    font-size: 27px;
+    font-size: 30px;
     line-height: 100%;
     color: #0A3871;
 }
 .subtitulo{
     position: absolute;
-    left: 425px;
-    top: 60px;
+    left: 305px;
+    top: 80px;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 100%;
     color: #0A3871;
 }
 p a{
-    font-size: 15px;
+    font-size: 16px;
     color: #0A3871;
     text-decoration: none;
 }
@@ -44,9 +44,9 @@ main textarea{
 .texto-nuevo{
     position: absolute;
     width: 450px;
-    height: 300px;
-    left: 250px;
-    top: 120px;
+    height: 330px;
+    left: 180px;
+    top: 160px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
@@ -64,8 +64,8 @@ main textarea{
     position: absolute;
     width: 450px;
     height: 18px;
-    top: 450px;
-    left: 250px;
+    top: 500px;
+    left: 180px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 300;
@@ -86,8 +86,8 @@ main textarea{
     position: absolute;
     width: 450px;
     height: 70px;
-    left: 250px;
-    top: 470px;
+    left: 180px;
+    top: 530px;
 }
 .encriptar{
     background-color: #0A3871;
@@ -122,9 +122,9 @@ main textarea{
     background-color: white;
     position: absolute;
     width: 250px;
-    height: 460px;
-    left: 800px;
-    top: 70px;
+    height: 500px;
+    left: 750px;
+    top: 100px;
     text-align: center;
     font-family: 'Inter';
     font-style: normal;
@@ -132,19 +132,20 @@ main textarea{
     font-size: 18px;
     line-height: 100%;
     resize: none;
+    box-shadow: 2px 2px 2px 1px #00000070;
 }
 .muneco{
     position: absolute;
     width: 160px;
     height: auto;
-    left: 855px;
+    left: 790px;
     top: 200px;
 }
 .secundario-dos{
     position: absolute;
     width: 160px;
     height: auto;
-    left: 855px;
+    left: 790px;
     top: 365px;
 }
 .frase{
@@ -169,7 +170,7 @@ main textarea{
     position: absolute;
     width: 160px;
     height: auto;
-    left: 855px;
+    left: 790px;
     top: 425px;
     font-family: 'Inter';
     font-weight: 550;
@@ -183,7 +184,7 @@ main textarea{
     position: absolute;
     width: 160px;
     height: auto;
-    left: 855px;
+    left: 790px;
     top: 425px;
     font-family: 'Inter';
     font-weight: 550;
@@ -195,8 +196,8 @@ main textarea{
 .copiar{
     display: none;
     position: absolute;
-    left: 825px;
-    top: 470px;
+    left: 780px;
+    top: 540px;
     background-color: white;
     padding: 5px 10px;
     width: 200px;
@@ -212,7 +213,7 @@ main textarea{
 footer{
     background-color: #082549;
     background-size: 100px auto;
-    height: 120px;
+    height: 12%;
 }
 nav{
     width: 500px;
@@ -273,21 +274,36 @@ nav a:hover {
 
 /*ajustes multiplataforma*/
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:786px){
+    .titulo, .subtitulo{
+        left: 30%; width: 60%;
+    }
     .texto-nuevo, .principal-dos, .botones{
-        left: 150px;
+        left: 15%; width: 70%;
+    }
+    .texto-nuevo{
+       height: 550px;
+    }
+    .principal-dos{
+        top: 720px;
+    } 
+    .botones{
+       top: 750px;
     }
     .texto-encriptado{
-        left: 700px;
+        top: 850px; left: 15%; width: 70%; height: 120px;
     }
-    .muneco, .secundario-dos, .exito-encriptar, .exito-desencriptar {
-        left: 755px;
+    .muneco, .exito-encriptar, .exito-desencriptar{
+        display: none; width: 0%; left: 25%; font-size: 1px;
+    }
+    .secundario-dos{
+        left: 25%; width: 50%; top:880px;
     }
     .copiar{
-        left: 725px;
+        left: 25%; top: 920px; width: 50%;
     }
 }
-@media screen and (max-width:920px){
+@media screen and (max-width:px){
     .titulo, .subtitulo{
         left: 250px;
     }
