--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ main textarea{
 .texto-nuevo{
     position: absolute;
     width: 450px;
-    height: 330px;
+    height: 45%;
     left: 180px;
     top: 160px;
     font-family: 'Inter';
@@ -64,7 +64,7 @@ main textarea{
     position: absolute;
     width: 450px;
     height: 18px;
-    top: 500px;
+    top: 72%;
     left: 180px;
     font-family: 'Inter';
     font-style: normal;
@@ -87,7 +87,7 @@ main textarea{
     width: 450px;
     height: 70px;
     left: 180px;
-    top: 530px;
+    top: 75%;
 }
 .encriptar{
     background-color: #0A3871;
@@ -122,7 +122,7 @@ main textarea{
     background-color: white;
     position: absolute;
     width: 250px;
-    height: 500px;
+    height: 60%;
     left: 750px;
     top: 100px;
     text-align: center;
@@ -197,7 +197,7 @@ main textarea{
     display: none;
     position: absolute;
     left: 780px;
-    top: 540px;
+    top: 78%;
     background-color: white;
     padding: 5px 10px;
     width: 200px;
@@ -212,12 +212,11 @@ main textarea{
 }
 footer{
     background-color: #082549;
-    background-size: 100px auto;
     height: 12%;
 }
 nav{
     width: 500px;
-    height: 60px;
+    height: 50px;
     margin: auto;
     
 }
